infrastructure/configs/keycloak/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: keycloak-ingress
  namespace: keycloak
  annotations:
    external-dns.alpha.kubernetes.io/hostname: keycloak.local.icutum.es
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  rules:
    - host: keycloak.local.icutum.es
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: keycloak-helmrelease
                port:
                  number: 80
  tls:
    - hosts:
        - keycloak.local.icutum.es
      secretName: keycloak-local-icutum-es-tls
